# kunlib

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  prompt.md  prompt_for_pr.md  pyproject.toml  result.json
kunlib/: __init__.py  agent_adapter.py  catalog.py  cli.py  registry.py  result.py  skill.py
kunlib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kunlib/common/: __init__.py  breeding.py  checksums.py  parsers.py  report.py
skills/hiblup-ebv/: SKILL.md  filegenerator.r  hiblup_ebv.py  run_hiblup.r
skills/kinship-inference/: SKILL.md  functions_colony.R  kinship_inference.py  run_colony.R  run_kinship.R  write_colony.R
skills/kinship-inference/demo/: 1K位点.txt  SampleInfo.csv
skills/lagm-mating/: SKILL.md  demogenerator.r  generate_demo.r  lagmPlan.r  lagm_mating.py  run_lagm.r
skills/pedigree-analysis/: SKILL.md  generate_demo.r  pedigree_analysis.py  run_pedigree.r
templates/: ADD-SKILL-PROMPT.md  SKILL-TEMPLATE.md
tests/: test_hiblup_ebv.py  test_kinship_inference.py  test_lagm_mating.py  test_pedigree_analysis.py  test_registry.py  test_result.py  test_skill.py
